gitops/fluxcd/kubernetes/overlays/gcp/dev/whereami/whereami/httproutes.yaml
# Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

---
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: whereami-foo
  namespace: whereami
  labels:
    app: whereami-foo
spec:
  gateways:
    allow: FromList
    gatewayRefs:
    - name: external-http
      namespace: apigateway
  hostnames:
  - "whereami-foo.gcp.lamirault.xyz"
  rules:
  - forwardTo:
    - serviceName: whereami-foo
      port: 8080
---
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: whereami-bar
  namespace: whereami
  labels:
    app: whereami-bar
spec:
  gateways:
    allow: FromList
    gatewayRefs:
    - name: external-http
      namespace: apigateway
  hostnames:
  - "whereami-bar.gcp.lamirault.xyz"
  rules:
  - forwardTo:
    - serviceName: whereami-bar
      port: 8080
